output3.txt
   Compiling command-macros v0.1.0 (/home/serverx/Documents/osudcbots/shishabot/command-macros)
warning: unused variable: `dm_permission`
   --> command-macros/src/msg_command/mod.rs:152:9
    |
152 |     let dm_permission = OptionWrapper(dm_permission);
    |         ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_dm_permission`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: struct `Parenthesised` is never constructed
  --> command-macros/src/util.rs:11:12
   |
11 | pub struct Parenthesised<T>(pub Punctuated<T, Comma>);
   |            ^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: trait `LitExt` is never used
  --> command-macros/src/util.rs:22:11
   |
22 | pub trait LitExt {
   |           ^^^^^^

warning: struct `AsOption` is never constructed
  --> command-macros/src/util.rs:53:12
   |
53 | pub struct AsOption<T>(pub Option<T>);
   |            ^^^^^^^^

warning: `command-macros` (lib) generated 4 warnings (run `cargo fix --lib -p command-macros` to apply 1 suggestion)
   Compiling shishabot v0.1.0 (/home/serverx/Documents/osudcbots/shishabot)
warning: use of deprecated field `twilight_model::application::interaction::Interaction::channel_id`: channel_id is deprecated in the discord API and will no be sent in the future, users should use the channel field instead.
  --> src/core/events/interaction/mod.rs:23:9
   |
23 |         channel_id,
   |         ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated field `twilight_model::application::command::Command::dm_permission`: use contexts instead
  --> src/commands/danser/render_score.rs:18:1
   |
18 | #[msg_command(name = "Render score")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this warning originates in the attribute macro `msg_command` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> src/commands/danser/render_score.rs:18:1
   |
18 | #[msg_command(name = "Render score")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Option<bool>`, found `bool`
   |
   = note: expected enum `std::option::Option<bool>`
              found type `bool`
   = note: this error originates in the attribute macro `msg_command` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0308`.
warning: `shishabot` (bin "shishabot") generated 2 warnings
error: could not compile `shishabot` (bin "shishabot") due to 1 previous error; 2 warnings emitted
